<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generate_tiles_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_tiles_zoom_label" />

            <TextView
                android:id="@+id/generate_tiles_min_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/generate_tiles_min_zoom_label" />

            <EditText
                android:id="@+id/generate_tiles_min_zoom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:id="@+id/generate_tiles_max_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/generate_tiles_max_zoom_label" />

            <EditText
                android:id="@+id/generate_tiles_max_zoom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/generate_tiles_max_features_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_tiles_max_features_label" />

            <EditText
                android:id="@+id/generate_tiles_max_features_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generate_tiles_compress_format_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_tiles_compress_format_label" />

            <Spinner
                android:id="@+id/generate_tiles_compress_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/generate_tiles_compress_formats"
                android:prompt="@string/generate_tiles_compress_format_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generate_tiles_compress_quality_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_tiles_compress_quality_label" />

            <EditText
                android:id="@+id/generate_tiles_compress_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/generate_tiles_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_tiles_type_label" />

        <RadioGroup
            android:id="@+id/generate_tiles_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/generate_tiles_type_geopackage_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/generate_tiles_type_geopackage_label" />

            <RadioButton
                android:id="@+id/generate_tiles_type_google_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_tiles_type_google_label" />
        </RadioGroup>

        <include
            android:id="@+id/generate_tiles_bounding_box"
            layout="@layout/bounding_box" />
    </LinearLayout>

</ScrollView>