<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tile_scaling_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tile_scaling_type_label" />

            <Spinner
                android:id="@+id/tile_scaling_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/tile_scaling_types"
                android:prompt="@string/tile_scaling_type_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tile_scaling_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tile_scaling_zoom_label" />

            <TextView
                android:id="@+id/tile_scaling_zoom_out_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tile_scaling_zoom_out_label" />

            <EditText
                android:id="@+id/tile_scaling_zoom_out_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:id="@+id/tile_scaling_zoom_in_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/tile_scaling_zoom_in_label" />

            <EditText
                android:id="@+id/tile_scaling_zoom_in_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>