<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/edit_feature_overlay_index_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/edit_feature_overlay_index_warning"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_feature_overlay_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_feature_overlay_zoom_label" />

            <TextView
                android:id="@+id/edit_feature_overlay_min_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/edit_feature_overlay_min_zoom_label" />

            <EditText
                android:id="@+id/edit_feature_overlay_min_zoom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:id="@+id/edit_feature_overlay_max_zoom_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/edit_feature_overlay_max_zoom_label" />

            <EditText
                android:id="@+id/edit_feature_overlay_max_zoom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_feature_overlay_max_features_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_feature_overlay_max_features_label" />

            <EditText
                android:id="@+id/edit_feature_overlay_max_features_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <include
            android:id="@+id/edit_feature_overlay_bounding_box"
            layout="@layout/bounding_box" />

        <include
            android:id="@+id/feature_tiles_feature_draw"
            layout="@layout/feature_tiles_draw" />

    </LinearLayout>

</ScrollView>